Fix image spillover on narrow-height screens.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -18,8 +18,11 @@ body {
 }
 
 @media only screen and (min-width: 905px) {
-  .search-page, .branded-header {
+  .branded-header {
     margin-left: 50px;
+  }
+  .search-page {
+    padding-left: 50px;
   }
 }
 
